6.14.6.1
    ldmadmin(1):
        * In the error messages resulting from checking the queue, put the pathname of the
          product-queue queue in quotes just in case it contains embedded whitespace
        * Added "pqmon -S" to the "showsettings" command

    keep_running(1):
        * Added a test for the executable's existance

6.14.5  2023-02-16T11:40:06-0700
    ldmadmin(1):
        * Made the determination of local vs. remote LDM ports in the command "ldmadmin printstats"
          more robust. In particular, it now counts transitory connections due to local rtstats(1)s
          when they exist.

    plotMetrics(1):
        * Improved some plot titles to clarify what they represent

    rtstats(1):
        * Commented code about what function logs messages because the code is convoluted
        * Removed trailing newline in rtstats(1) log message to eliminate extraneous log message
        * Eliminated sending of NULLPROC before closing connection because it's superfluous
        * Documented return value of ldmsend_statsbin()
        * Eliminated possibility of overrun in formatting report
        * Eliminated unnecessary log message
        * Replaced abort() due to unsupported remote LDM version with log_error() and ECONNABORTED
          return value
        * Restructured code
            * Decreased the coupling between the statistics gathering module and the LDM reporting
              module
            * Renamed several functions to increase clarity
            * Moved that which could and should be done before sending reports from inside the
              report-sending code to an initialization step (e.g., MD5 checksum allocation, product
              class initialization, sequence number, HIYA)
            * Clarified logic by breaking complex functions into multiple functions
        * Improved internal documentation
        * Eliminated small memory-leak due to product class return value from HIYA not being freed