@@ -4,6 +4,10 @@
           product-queue queue in quotes just in case it contains embedded whitespace
         * Added "pqmon -S" to the "showsettings" command
 
+    notifyme(1):
+        * Added "-O" option to include product origin in output
+        * Modified usage message to use LDM logging module
+
     keep_running(1):
         * Added a test for the executable's existance
 
